# crosslab

./: .devcontainer.json  .gitignore  .gitlab-ci.yml  .jobs.yml  README.md  codecov.yml  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/crosslabFeature/: devcontainer-feature.json  install.sh
.github/workflows/: build-and-publish-auth-service.yml  build-and-publish-device-service.yml  build-and-publish-experiment-service.yml  build-and-publish-fedaration-service.yml  build-and-publish-gateway-service.yml  build-and-publish-update-service.yml  clients-api-python-lint.yml  clients-api-python-test.yml  clients-soa-python-lint.yml  clients-soa-python-test.yml  deploy.yml
client/: package-lock.json  package.json  tsconfig.json
client/src/: index.ts
clients/api/python/: .gitignore  README.md  coverage.xml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  tox.ini
clients/api/python/.devcontainer/: Dockerfile  devcontainer.json
clients/api/python/scripts/: build.sh  lint.sh  publish.sh
clients/api/python/src/crosslab/api_client/: __init__.py  client.py  improved_client.py  schemas.py
clients/api/python/src/crosslab_api_client/: __init__.py  client.py  schemas.py
clients/api/python/template/: client.py.njk  schemas.py.njk
clients/api/python/test_template/: test_openapi.py.njk
clients/api/python/tests/: test_improved_client.py  test_openapi.py
clients/fstTest/: .gitignore  package-lock.json  package.json  tsconfig.json
clients/gift_example/: .gitignore
clients/soa/python/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  tox.ini
clients/soa/python/scripts/: build.sh  lint.sh  publish.sh  test.sh
clients/soa/python/src/crosslab/soa_client/: connection.py  connection_webrtc.py  connection_websocket.py  device_handler.py  logging.py  messages.py  schemas.py  service.py
clients/soa/python/src/crosslab/soa_client/media/: gst_track.py  udp_track.py
clients/soa/python/src/crosslab/soa_client/test_helper/: __init__.py  connection_stub.py  dummy_track.py  service_stub.py
clients/soa/python/src/crosslab_soa_client/: connection.py  connection_webrtc.py  device_handler.py  schemas.py
clients/soa/python/src/crosslab_soa_client/media/: gst_track.py  udp_track.py
clients/soa/python/template/: schemas.py.njk
clients/soa/python/tests/: conftest.py  create_test_file.py  test_device_handler.py  test_webrtc_connection.py  test_websocket_connection.py
clients/soa/python/tests/helpers/: __init__.py  async_exception.py  mock_server.py
clients/soa_services/electricalConnection/python/: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  tox.ini
clients/soa_services/electricalConnection/python/.devcontainer/: devcontainer.json
clients/soa_services/electricalConnection/python/scripts/: build.sh  publish.sh  test.sh
clients/soa_services/electricalConnection/python/src/crosslab/soa_services/electrical/: __init__.py  electrical_connection_service.py  messages.py  schema.py  signal_interface.py
clients/soa_services/electricalConnection/python/src/crosslab/soa_services/electrical/signal_interfaces/: gpio.py
clients/soa_services/electricalConnection/python/tests/: data.py  helper.py  test_gpio.py  test_standard.py
clients/soa_services/webcam/python/: requirements.txt  setup.cfg  tox.ini
clients/soa_services/webcam/python/src/crosslab/soa_services/webcam/: __init__.py  media.py  messages.py  webcam_service.py
clients/soa_services/webcam/python/tests/: data.py  test_standard.py
common/node/: .eslintrc  .prettierrc  .prettierrc.js  tsconfig-app.json
deploy/docker-compose/: deploy.sh  deploy_goldi.sh  docker-compose.yml  docker-compose_goldi.yml  docker-compose_update.yml  prepare.sh
deployment/production/: docker-compose.yml
diagrams/devices/: delete_devices_id.puml  get_devices.puml  get_devices_id.puml  patch_devices_id.puml  post_devices.puml
diagrams/peerconnections/: delete_peerconnections_id.puml  get_peerconnections.puml  get_peerconnections_id.puml  post_peerconnections.puml
diagrams/use_cases/: experiment_add_device.puml  experiment_booking.puml  experiment_close.puml  experiment_remove_device.puml  experiment_start.puml  peerconnection_close.puml  peerconnection_close_v1.puml  peerconnection_close_v2.puml
docs/: _config.yml  backend.md  index.html  index.md  msc.md
docs/api/: authentication.md  booking.html  booking.md  device.md  experiment.html  experiment.md  federation.html  federation.md  index.md  update.md
docs/meta-schemas/: openapi-content.json  openapi-parameter.json  openapi-resource.json
frontend/edrys/: .eslintrc  .gitignore  Dockerfile  index.html  package-lock.json  package.json  package.resolved.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/update/: .prettierrc  Dockerfile  index.html  package-lock.json  package.json  webpack.config.js
git-hooks/: pre-commit
helper/api-test/: package-lock.json  package.json  tsconfig.json
helper/api-test_old/: package-lock.json  tsconfig.json
helper/api-tester/: package-lock.json  package.json
helper/builder/: package-lock.json  package.json  tsconfig.json
helper/dummy-device/python/: .gitignore  requirements.txt  setup.cfg  tox.ini
helper/dummy-device/python/scripts/: build.sh
helper/dummy-device/python/src/dummy_device/: __main__.py
helper/python-test-helper/: requirements.txt  setup.cfg  tox.ini
helper/python-test-helper/scripts/: build.sh
helper/python-test-helper/src/test_helper/: __init__.py  async_timeout.py  no_reference_leaks.py
helper/python-test-helper/tests/: test_no_reference_leaks.py
integration-test/: .env  .eslintrc  .gitignore  .prettierrc  .prettierrc.js  database.db  debug.ini  docker-compose.yaml  package-lock.json  package.json  requirements.txt  tsconfig-base.json  tsconfig.json
scripts/: ci.sh  clean_remote_cache.sh  devcontainer_build-and-publish.sh  housekeeping  housekeeping.sh  install-hooks.sh  pre-merge.sh  publish.sh  run_local.sh
(+1856 files in other folders)
