[metadata]
name = test_helper
version = 0.0.0+dev.e84d2ad6
author = Johannes Nau
author_email = johannes.nau@tu-ilmenau.de
description = Helper Project used in python tests
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <3.14
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = py.typed
