[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crosslab_api_client"
version = "0.0.1"
authors = [
  { name="Johannes Nau", email="johannes.nau@tu-ilmenau.de" },
]
description = "The CrossLab API Client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]