[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crosslab_api_client"
version = "0.0.1"
authors = [
    {name= "Johannes Nau", email="johannes.nau@tu-ilmenau.de"}
]
description = "The CrossLab API Client"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]
dependencies = [
    "aiohttp",
    "python-dateutil"
]

[tool.setuptools.package-data]
"crosslab.api_client" = ["py.typed"]

[tool.pytest]
norecursedirs = "tests/helpers"