[metadata]
name = crosslab_api_client
version = 0.0.2
author = Johannes Nau
author_email = johannes.nau@tu-ilmenau.de
description = The CrossLab API Client
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

install_requires=
    aiohttp
    python-dateutil

[options.packages.find]
where = src
