[metadata]
name = crosslab_api_client
version = 
author = Johannes Nau
author_email = johannes.nau@tu-ilmenau.de
description = The CrossLab API Client
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8, <3.12
include_package_data = True

install_requires =
    aiohttp
    python-dateutil

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[tool:pytest]
norecursedirs = tests/helpers
