[metadata]
name = crosslab_soa_client
version =
author = Johannes Nau
author_email = johannes.nau@tu-ilmenau.de
description = The CrossLab SOA Client
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8, <3.11
include_package_data = True

install_requires =
    crosslab-aiortc >= 1.8.0
    crosslab_api_client

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[tool:pytest]
norecursedirs = tests/helpers
