[metadata]
name = dummy_device
version = 
author = Johannes Nau
author_email = johannes.nau@tu-ilmenau.de
description = The Crosslab Dummy Device
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9, <3.14

install_requires =
    crosslab_api_client
    crosslab_soa_client
    crosslab_soa_service_electrical
    debugpy

[options.packages.find]
where = src

[options.package_data]
dummy_device = [py.typed]

[options.entry_points]
console_scripts =
    dummy-device-python = dummy_device.__main__:main
