[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crosslab_soa_service_electrical"
version = "0.0.1"
authors = [
    {name= "Johannes Nau", email="johannes.nau@tu-ilmenau.de"}
]
description = "The CrossLab SOA Electrical Service"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]
dependencies = [
    "crosslab_soa_client"
]

[tool.setuptools.package-data]
"crosslab.soa_services.electrical" = ["py.typed"]